mobile/themes/custom/variables.less
//----------------------------------------------------------------
// 1. Variables for quick setting
//----------------------------------------------------------------

// Default state variables
@theme-default-margin: 8px;
@theme-default-padding: 8px;
@theme-default-font-size: 14px;
@theme-default-font-family: Helvetica;
@theme-default-font-weight: normal;
@theme-default-text-shadow: none;
@theme-default-color: #131313;	// numerical color value
@theme-default-border-color: #B5BCC7;	// numerical color value
@theme-default-border-radius: 5px;
@theme-default-background-color: lighten(@theme-default-border-color, 20%);

// Highlighting state variables
@theme-highlight-font-size: 18px;
@theme-highlight-font-family: @theme-default-font-family;
@theme-highlight-font-weight: bold;
@theme-highlight-text-shadow: rgba(0,0,0,0.2) 0px 1px 2px;
@theme-highlight-color: #000000;	// numerical color value
@theme-highlight-border-color: #769DC0;	// numerical color value
@theme-highlight-background-color: #5CB0FF;	// numerical color value

//----------------------------------------------------------------
// 2. Variables for typical style setting
//----------------------------------------------------------------

// Color
@theme-heading-color: @theme-default-color;
@theme-heading-border-color: @theme-highlight-border-color;
@theme-heading-background-color: @theme-highlight-background-color;
@theme-dom-button-background-color: @theme-highlight-background-color;
@theme-tabbar-color: @theme-default-color;
@theme-round-rect-border-color: @theme-default-border-color;
@theme-round-rect-background-color: #FFFFFF;
@theme-round-rect-box-shadow: 5px 5px 5px @theme-round-rect-border-color;
@theme-category-color: @theme-highlight-color;
@theme-list-item-color: @theme-default-color;
@theme-list-item-border-color: @theme-default-border-color;
@theme-list-item-background-color: #FFFFFF;
@theme-ui-widget-color: @theme-default-color;
@theme-ui-widget-selected-color: @theme-highlight-color;
@theme-ui-widget-border-color: @theme-default-border-color;
@theme-ui-widget-selected-border-color: @theme-highlight-border-color;
@theme-ui-widget-background-color: @theme-highlight-background-color;
@theme-ui-widget-selected-background-color: darken(@theme-ui-widget-background-color, 30%);
@theme-ui-widget-checked-background-color: darken(@theme-ui-widget-background-color, 20%);
@theme-ui-widget-disabled-background-color: lighten(@theme-ui-widget-background-color, 10%);

// Font
@theme-heading-font-size: @theme-highlight-font-size;
@theme-heading-font-family: @theme-highlight-font-family;
@theme-heading-font-weight: @theme-default-font-weight;
@theme-heading-text-shadow: @theme-highlight-text-shadow;
@theme-tabbar-font-size: @theme-default-font-size - 3;
@theme-tabbar-font-family: @theme-default-font-family;
@theme-tabbar-font-weight: @theme-default-font-weight;
@theme-category-font-size: @theme-default-font-size;
@theme-category-font-family: @theme-highlight-font-family;
@theme-category-font-weight: @theme-highlight-font-weight;
@theme-category-text-shadow: none;
@theme-list-item-font-size: @theme-highlight-font-size;
@theme-list-item-font-family: @theme-default-font-family;
@theme-list-item-font-weight: @theme-default-font-weight;
@theme-list-item-text-shadow: none;
@theme-ui-widget-font-size: @theme-default-font-size;
@theme-ui-widget-font-family: @theme-default-font-family;
@theme-ui-widget-font-weight: @theme-default-font-weight;
@theme-ui-widget-text-shadow: none;

// Size
@theme-heading-height: 40px;
@theme-tabbar-height: 50px;
@theme-category-height: 30px;
@theme-list-item-height: 50px;
@theme-icon-item-height: 65px;
@theme-icon-item-width: 65px;
@theme-ui-widget-height: 30px;
@theme-ui-widget-width: 90px;

@theme-ui-widget-border-radius: 2px;	// square style
//@theme-ui-widget-border-radius: @theme-default-border-radius;	// round style
//@theme-ui-widget-border-radius: @theme-ui-widget-height * 0.5;	// oval style

// background-image gradation
._background-image-gradient-mask-heading () {
	@delta: 1% / @theme-heading-height * 100;
	// claro gradation
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255, 255, 255, 1)), color-stop(@delta * 1, rgba(255, 255, 255, 1)), color-stop(@delta * 1, rgba(255, 255, 255, 0.14)), color-stop(@delta * 2, rgba(255, 255, 255, 0.14)), color-stop(@delta * 2, rgba(255, 255, 255, 0.52)), color-stop(@delta * 3, rgba(255, 255, 255, 0.52)), color-stop(@delta * 3, rgba(255, 255, 255, 0.68)), color-stop(@delta * 4, rgba(255, 255, 255, 0.68)), color-stop(1, rgba(255, 255, 255, 0)));
}
._background-image-gradient-mask-ui-widget () {
	@delta: 1% / @theme-ui-widget-height * 100;
	// claro gradation
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(255, 255, 255, 1)), color-stop(@delta * 1, rgba(255, 255, 255, 0.1)), color-stop(0.5, rgba(255, 255, 255, 0.6)), color-stop(1, rgba(255, 255, 255, 0.3)));
}
._background-image-gradient-mask-ui-widget-r () { // for .mblArrowButtonHead-styles
	@delta: 1% / @theme-ui-widget-height * 100;
	// claro gradation
	background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, rgba(255, 255, 255, 1)), color-stop(@delta * 1, rgba(255, 255, 255, 0.1)), color-stop(0.5, rgba(255, 255, 255, 0.6)), color-stop(1, rgba(255, 255, 255, 0.3)));
}
/* ... */

